...
    }
  };

  return (
    <View testID={`product-screen-${eanCode}`} style={styles.container}>
      <ScrollView
        testID="product-screen-scroll-view"
        contentInsetAdjustmentBehavior="automatic">
        <View
          testID={
            isRelated ? 'related-product-screen' : 'scanned-product-screen'
          }>
          {productCouldBeFound ? (
            <ProductDetails
              eanCode={eanCode}
              isRelated={isRelated}
              onNotFoundProduct={() => setProductCouldBeFound(false)}
...
