...

  return (
    <View style={styles.container}>
      {hasPermission ? (
        <View style={styles.buttonBarcode}>
          <Pressable
            testID="barcode-scanner-button"
            disabled={!hasPermission}
            onPress={() => navigation.navigate('BarcodeScanner')}>
            <Image
              style={styles.imageBarcode}
              source={require('assets/images/barcode.png')}
            />
...
              onPress={requestPermission}
            />
          </View>
        </View>
      )}
      <View style={styles.privacyContainer}>
        <Pressable testID="privacy-link" onPress={displayPrivacy}>
          <Text style={styles.privacyText}>{t('privacy')}</Text>
        </Pressable>
      </View>
    </View>
  );
};
...
